risolto bug modifica opera

--- a/galleria/src/main/resources/messages/messages_it.properties
+++ b/galleria/src/main/resources/messages/messages_it.properties
@@ -7,7 +7,11 @@ label.invalid.user=nome utente o password errati
 label.nome=Nome: 
 label.cognome=Cognome: 
 label.descrizione=Descrizione: 
+label.titolo=Titolo:
 label.anno=Anno: 
+label.tecnica=Tecnica:
+label.artista=Artista:
+label.dimensione=Dimensioni:
 label.nazionalita=Nazionalita:
 label.annoNascita=AnnoNascita:
 label.annoMorte=AnnoMorte:
