ulteriori bug fixes

--- a/galleria/src/main/resources/messages/messages_it.properties
+++ b/galleria/src/main/resources/messages/messages_it.properties
@@ -28,3 +28,4 @@ label.email=Email:
 label.url=Url:
 label.usernameError=Devi inserire uno username compreso tra 8 e 32 caratteri
 label.passwordError=Devi inserire una password compresa tra 8 e 32 caratteri
+form.hasErrors=Errore:
